--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-beta.2",
     "chart.js": "2.7.0",
+    "firebase": "^4.6.2",
     "font-awesome": "^4.7.0",
     "history": "4.7.2",
     "react": "^16.0.0",
