--- a/package.json
+++ b/package.json
@@ -39,12 +39,15 @@
     "react": "^16.0.0",
     "react-chartjs-2": "2.6.4",
     "react-dom": "^16.0.0",
+    "react-google-button": "^0.4.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.3",
-    "simple-line-icons": "^2.4.1",
-    "react-redux": "^5.0.6",
-    "redux":"^3.7.2"
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0",
+    "simple-line-icons": "^2.4.1"
   },
   "scripts": {
     "dev": "webpack -d --progress --watch --profile --json > compilation-stats.json --env.dev",
