--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.3",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "simple-line-icons": "^2.4.1"
