--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "webpack-dev-server": "^2.9.2"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "axos": "0.0.1",
     "bootstrap": "4.0.0-beta.2",
     "chart.js": "2.7.0",
     "firebase": "^4.6.2",
