--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axos": "0.0.1",
     "bootstrap": "4.0.0-beta.2",
     "chart.js": "2.7.0",
+    "debug": "^3.1.0",
     "firebase": "^4.6.2",
     "font-awesome": "^4.7.0",
     "history": "4.7.2",
